[package]
name = "lgtmeow"
version = "0.6.3"
edition = "2024"
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
description = "LGTMeow 🐾 —— 「本喵觉得很不错～」"
license = "MIT"
homepage = "https://github.com/moefyit/lgtmeow"
repository = "https://github.com/moefyit/lgtmeow"
readme = "README.md"
keywords = ["LGTM", "meow", "LGTMeow", "cli", "emoji-kitchen"]
rust-version = "1.85"

[features]
default = ["emoji-paw-prints"]
emojis-all = ["emoji-paw-prints", "emoji-cat"]
emoji-paw-prints = []
emoji-cat = []
copy = ["copypasta"]

[build-dependencies]
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0"
cliclack = "0.4.0"
console = "0.16.2"
toml = "1.0.0"
copypasta = { version = "0.10.2", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
