[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "lgtmeow"
description = "LGTMeow 🐾 —— 「本喵觉得很不错～」"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["LGTM", "meow", "LGTMeow", "cli", "emoji-kitchen"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
bindings = "bin"
features = ["copy"]
